# poetry-demo

./: pyproject.toml
src/time_parrot/: message.py
tests/time_parrot/: test_message.py
