[tool.poetry]
name = "time-parrot"
version = "0.1.0"
description = ""
authors = ["alexrembridge <a.rembridge@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "time_parrot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
time_parrot = "time_parrot.message:time"
